<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cvContactos"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/activity_horizontal_margin"
    cardview:cardCornerRadius="@dimen/cardview_corner_radius">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/cv_padding">

        <ImageView
            android:id="@+id/imgFoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher"/>
        <ImageView
            android:id="@+id/like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/like_it_96"
            android:layout_marginRight="18dp"
            android:layout_marginEnd="18dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/imgFoto"
            android:layout_toEndOf="@+id/imgFoto"
            android:id="@+id/linearLayout">
            <TextView
                android:id="@+id/tvNombreCv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cv_Nombre"
                android:textStyle="bold"
                android:textSize="@dimen/cv_texto_nombre"/>
            <TextView
                android:id="@+id/tvtelefonoCv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cv_Telefono"
                android:textSize="@dimen/cv_texto_telefono"/>
            <TextView
                android:id="@+id/tvMailCv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cv_Email"
                android:textSize="@dimen/cv_texto_mail"/>
        </LinearLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>